Limiting page site to avoid horizontal scroll in the party view

--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: sans;
+    width: 95%;
 }
 
 tr.final {
